@startuml 
title Product Model 
class Product {
    -name: string
    -price:float
    -quantity:int 
    --
    +getName():string
    +getPrice():float
    +getQuantity():int
    --
    +setName(value:string)
    +setPrice(value:float)
    +setQuantity(value:int)
    --
    +Product(name:string, price:float, quantity:int) 
    -- 
    +getTotalPrice():float
    +toString()
}

class ProductHelper {
    +{static}createItemFromText()
    +{static}getBalance()
}

Product -u-|> Object : <<extends>>
ProductHelper -l-|> Object : <<extends>>

hide empty members


@enduml